add SilkScreen to title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Atelier Artisanal Digital
+title: Atelier Artisanal Digital - SilkScreen
 author:
   name: Ugo Di Profio
   email: silkscreenapp@diprofio.net
